# rss-feeder

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-and-alert.yaml
scripts/: common.py  get_rss_feed.py  google_chat.py
web/: feed.json  index.html
